start using ulid for component relationship
